# dl-sound-classification

./: .gitignore  PACE-ICE-SETUP.md  README.md  TRAINING.md  check_specs.py  pyproject.toml  requirements.txt
configs/: base_training.yaml  optimization.yaml  training.yaml
configs/dataset/: esc50.yaml  esc50_ast.yaml  esc50_envnet_v2.yaml  urbansound8k.yaml
configs/experiment/: ast_mixup.yaml  envnet_v2_bc_mixing.yaml
configs/experiments/: my_experiment.yaml
configs/model/: ast.yaml  ast_mini.yaml  ast_small.yaml  cnn_esc50.yaml  envnet_v2.yaml  leaf.yaml
configs/optimization/hyperparameter_spaces/: README.md  envnet_v2.yaml  loss.yaml  training.yaml
configs/optimization/hyperparameter_spaces/models/: ast.yaml  envnet_v2.yaml
scripts/: analyze_study.py  cache_manager.py  debug_optimize.py  download_data.py  mlflow_ui.py  optimize_hyperparams.py  prepare_esc50.py  train.py
src/datasets/: esc50.py  preprocessing.py
src/models/: ast.py  ast_mini.py  ast_small.py  cnn_esc50.py  envnet_v2.py  leaf.py
src/optimization/: __init__.py  hyperparameter_space.py  optuna_trainer.py  pruning_callbacks.py  study_manager.py
src/training/: callbacks.py  engine.py  optuna_engine.py
src/utils/: audio.py
